modified application.conf and Connection class

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,11 @@
 include "secure"
 
+pgDataBase{
+driverClassName="org.postgresql.Driver"
+url="jdbc:postgresql://localhost:5432/pg_products_rest"
+user="postgres"
+pass="admin"
+}
 # db connections = ((physical_core_count * 2) + effective_spindle_count)
 fixedConnectionPool = 5
 
