--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .bsp/
 .idea
 Note
+NOTICE
 logs
 project/target
 project/project/target
@@ -9,10 +10,13 @@ null
 .scalafix.conf
 webui.sbt
 assignment.sbt
+gatling
+scripts
 .bloop/
 .metals/
 .vscode/
 project/.bloop/
 project/metals.sbt
 project/project/
+
 
