Play - Doobie - PostgreSQL - TestContainer
* Doobie draft copy pending debugging

* debug source for doobie and postgresql

* code from product repository improved

* "Some testing"

* "Some testing"

* "modified gitignore"

* " "

* modified application.conf and Connection class

* work in bilki's review v 0.1

* work in bilki's review v 0.2

* standar report

* testcontainers introducction

* IntegrationTest, Either instead try-catch, ProductToProcess case class

* Evolutions, ProductCotrollerSpec

* build.sbt IntegrationTest-dependencies, and unitarytest

* depure ReportSpec

* getProductService parameter as a type instead Either

* unsafeToFuture() method in repositories classes

* vegeta review

* reset gitIgnore

* _

* Readme

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,12 +1,10 @@
 include "secure"
 
-# db connections = ((physical_core_count * 2) + effective_spindle_count)
-fixedConnectionPool = 5
-
-repository.dispatcher {
-  executor = "thread-pool-executor"
-  throughput = 1
-  thread-pool-executor {
-    fixed-pool-size = ${fixedConnectionPool}
-  }
+pgDataBase {
+  driverClassName="org.postgresql.Driver"
+  url="jdbc:postgresql://localhost:5432/pg_products_rest"
+  url=${?URL}
+  user="postgres"
+  pass="admin"
 }
+
